# swan-dict

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Messages.sh  README.md
.github/workflows/: obs.yml  package-artifacts.yml
applet/: metadata.json
applet-owned/config/: config.qml
applet/contents/ui/: DictionaryPopup.qml  DictionaryTooltip.qml  configTranslation.qml
applets/common/contents/ui/: SwanDictController.qml  configTranslation.qml
assets/: 2026-06-02 20-33-25.mov
doc/: development.md  high-level-design.md  proposal.md
kwin-helper/: CMakeLists.txt  metadata.json  swandictmousehelper.cpp
packaging/: maintainer-obs.md
packaging/ci/: build-package.sh
packaging/obs/: PKGBUILD  README.md  _service  swan-dict.spec  update-obs-sources.sh
packaging/obs/debian/: changelog  control  copyright  rules
patches/: 0001-digital-clock-qml-date-label.patch  0002-tooltip-qml-dictionary-content.patch  0003-main-qml-swan-dict-wiring.patch  0004-config-qml-translation-page.patch  0005-main-xml-translation-settings.patch  0008-config-time-zones-digital-clock-i18n.patch  0009-calendar-view-digital-clock-i18n.patch
patches/arch-plasma-6.6.5/: 0001-digital-clock-qml-date-label.patch  0002-tooltip-qml-dictionary-content.patch  0004-config-qml-translation-page.patch  0007-config-calendar-digital-clock-i18n.patch
patches/digital-clock/arch/latest/: 0009-calendar-view-digital-clock-i18n.patch
patches/digital-clock/debian/13/: 0003-main-qml-swan-dict-wiring.patch  0007-config-calendar-digital-clock-i18n.patch
patches/digital-clock/fedora/44/: 0001-digital-clock-qml-date-label.patch  0003-main-qml-swan-dict-wiring.patch  0005-main-xml-translation-settings.patch  0008-config-time-zones-digital-clock-i18n.patch
patches/digital-clock/ubuntu/26.04/: 0001-digital-clock-qml-date-label.patch  0002-tooltip-qml-dictionary-content.patch  0006-config-appearance-digital-clock-i18n.patch  0010-no-timezone-warning-digital-clock-i18n.patch
po/zh_CN/: plasma_applet_com.github.LXYan2333.swan-dict.po
scripts/: manage.py  prepare-arch-digital-clock-fallback.sh  regenerate-patches.sh  sync-digital-clock.sh
scripts/hooks/: pre-commit
src/: CMakeLists.txt  clipboardwriter.cpp  clipboardwriter.h  selectionwatcher.cpp  selectionwatcher.h  translator.cpp  translator.h  waylandprimaryselection.cpp  waylandprimaryselection.h
tests/: CMakeLists.txt  translator_lookup_test.cpp
tools/: wayland-primary-selection-poc.cpp
tools/import-ecdict/: import_ecdict.py
tools/selection-poc/: CMakeLists.txt  main.cpp
tools/wayland-primary-poc/: CMakeLists.txt  main.cpp
tools/wayland-primary-poc/protocols/: wlr-data-control-unstable-v1.xml
